# cppThermalCamera

./: CMakeLists.txt  README.md  main.cpp  run.sh  version.h.in
